[gd_scene load_steps=8 format=2]

[ext_resource path="res://Commons/f_s_general_dialog/general_dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Level1/Level1.gd" type="Script" id=2]
[ext_resource path="res://Commons/country-platform-preview.png" type="Texture" id=3]
[ext_resource path="res://images/bkg dininghallevil.png" type="Texture" id=4]
[ext_resource path="res://images/ron normal.png" type="Texture" id=5]
[ext_resource path="res://images/bkg dininghallblue.png" type="Texture" id=6]
[ext_resource path="res://images/bkg palaceroom.png" type="Texture" id=7]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="diagon_alley_branch" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" parent="diagon_alley_branch" instance=ExtResource( 1 )]
dialog_file_path = "res://Levels/Level1/Level1_dialogs.txt"
dialog_index_end = 4

[node name="shop_button_1" type="TextureButton" parent="diagon_alley_branch"]
margin_left = 335.0
margin_top = 200.0
margin_right = 835.0
margin_bottom = 700.0
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shop_button_2" type="TextureButton" parent="diagon_alley_branch"]
margin_left = 1077.45
margin_top = 200.0
margin_right = 1577.45
margin_bottom = 700.0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ron normal" type="Sprite" parent="diagon_alley_branch"]
position = Vector2( 1692.13, 857.092 )
scale = Vector2( 0.825695, 0.770939 )
texture = ExtResource( 5 )

[node name="shop_1_branch" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" parent="shop_1_branch" instance=ExtResource( 1 )]
dialog_file_path = "res://Levels/Level1/Level1_dialogs.txt"
dialog_index_begin = 7
dialog_index_end = 8

[node name="shop_2_branch" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="DialogBox" parent="shop_2_branch" instance=ExtResource( 1 )]
dialog_file_path = "res://Levels/Level1/Level1_dialogs.txt"
dialog_index_begin = 7
dialog_index_end = 8
